--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,12 @@
   "manifest_version": 3,
 
   "name": "Hide Twitter Trends",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Hide Twitter trends on the sidebar (`What's happening`).",
   "author": "Susumu OTA",
   "homepage_url": "https://github.com/susumuota/hide-twitter-trends",
 
-  "content_scripts": [{ "matches": ["https://twitter.com/*"], "js": ["content.js"] }]
+  "content_scripts": [
+    { "matches": ["https://x.com/*", "https://twitter.com/*"], "js": ["content.js"] }
+  ]
 }
